replaced static String#format by virtual method String#formatted